# solven-agentserver-langgraph

./: .env.example  .gitignore  .gitmodules  DOCX_EXAMPLE_README.md  Escritura Compraventa Vivienda - Editada.docx  Escritura Compraventa Vivienda.docx  IMPLEMENTATION_PLAN.md  TEST_STREAM_WRITER.md  create_docx.js  documento_editado.docx  documento_ejemplo.docx  edit_docx.py  editar_escritura.py  langgraph.json  package-lock.json  package.json  pyproject.toml
.venv_temp/: pyvenv.cfg
docs/: AGENT_PATH_GUIDE.md  BWRAP_ISOLATED_ENVIRONMENTS.md  BWRAP_ONLY_ISOLATION.md  BWRAP_SIMPLIFICATION.md  CHANGES_DYNAMIC_PROMPT.md  DYNAMIC_PROMPT_SYSTEM.md  ERROR_HANDLING_IMPROVED.md  FIX_MISSING_VENV_ISSUE.md  IMPLEMENTATION_SUMMARY.md  ISOLATION_SYSTEM_COMPLETE.md  MAIN_AGENT_PROMPT.md  MAIN_AGENT_SYSTEM_PROMPT.txt  MAIN_AGENT_SYSTEM_PROMPT_LANGSMITH.txt  NAMING_CONSISTENCY_FIX_SUMMARY.md  PATH_CONSISTENCY.md  PATH_ISSUE_RESOLVED.md  QUICK_START_SRT.md  R2_PERSISTENCE_MODEL.md  RCLONE_FIX.md  RCLONE_MOUNT_FIX.md  RELIABLE_SANDBOXED_WORKSPACE.md  SINGLE_FILE_WORKSPACE.md  SKILLS_CORRECTED.md  SKILLS_IMPLEMENTATION_SUMMARY.md  SKILLS_INSTRUCTIONS_MD_HIDDEN.md  SKILLS_SYSTEM.md  SKILL_EXAMPLE.md  SRT_CORRECT_IMPLEMENTATION.md  SRT_DEPLOYMENT_GUIDE.md  SRT_FINAL.md  SRT_FINAL_IMPLEMENTATION.md  SRT_IMPLEMENTATION_SUMMARY.md  TEMPLATE_AUTO_CONFIG.md  TEMPLATE_READY.md  TEMPLATE_UPDATE.md  TWO_STATE_PROMPT_SYSTEM.md  UPLOAD_TO_LANGSMITH.md  VIRTUAL_FILESYSTEM.md  WORKSPACE_CONFIG_CHANGES.md  WORKSPACE_STRUCTURE.md  (+12 more)
escritura_unpacked/: [Content_Types].xml
escritura_unpacked/_rels/: .rels
escritura_unpacked/docProps/: core.xml
escritura_unpacked/word/: comments.xml  commentsExtended.xml  commentsExtensible.xml  commentsIds.xml  document.xml  fontTable.xml  numbering.xml  people.xml  settings.xml  styles.xml  webSettings.xml
models.py/: _21risk.py  _2chat.py  ably.py  abuselpdb.py  abyssale.py  accredible_certificates.py  acculynx.py  active_campaign.py  active_trail.py  adrapid.py  adyntel.py  aeroleads.py  agentql.py  agiled.py  agility_cms.py  ai_ml_api.py  airtable.py  algodocs.py  algolia.py  all_images_ai.py  alpha_vantage.py  altoviz.py  alttext_ai.py  amplitude.py  anchor_browser.py  anonyflow.py  anthropic_administrator.py  apaleo.py  api2pdf.py  api_bible.py  api_labz.py  api_ninjas.py  api_sports.py  apify.py  apipie_ai.py  apollo.py  appdrag.py  asana.py  ashby.py  astica_ai.py  (+622 more)
src/: auth.py  backend.py  composio_tools.py  elasticsearch_retriever.py  embeddings.py  llm.py  models.py  s3_client.py  s3_utils.py  sandbox_backend.old.py  sandbox_backend.py  skills.py  test.ipynb  test.py  test_composio.py  utils.py  workspace_template.py
src/agent/: custom_skills_middleware.py  deep_agent.py  graph.py  middleware.py  prompt.py  prompt.xml  tools.py
src/e2b_sandbox/resources/: package.json  pyproject.toml
tests/: test_path_consistency.py
unpacked/: [Content_Types].xml
workspace-templates/: data-science.yaml  default.yaml  minimal.yaml  workspace.toml
(+741 files in other folders)
