[project]
name = "agent"
version = "0.0.1"
description = "Solven agent server"
authors = [
    { name = "Metaloss Intelligence", email = "admin@metaloss.es" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "composio",
    "composio-langchain",
    "copilotkit",
    "deepagents",
    "e2b",
    "elasticsearch>=8,<9",
    "langchain",
    "langchain-cloudflare",
    "langchain-community",
    "langchain-docling",
    "langchain-elasticsearch-lc1",
    "langchain-groq",
    "langchain-ibm",
    "langchain-mcp-adapters",
    "langchain-openai",
    "langchain-openrouter",
    "langchain-postgres",
    "langgraph",
    "langsmith",
    "modal",
    "smithery",
    "supabase",
]


[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio",
    "langgraph-cli[inmem]",
    "mypy",
    "pytest",
    "ruff",
]
