[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.11"
# DOCX: defusedxml, python-docx | PDF: pypdf, pdfplumber, reportlab | XLSX: openpyxl, pandas | OCR: pytesseract, pdf2image | Pillow
dependencies = [
    "defusedxml",
    "python-docx",
    "pypdf",
    "pdfplumber",
    "reportlab",
    "openpyxl",
    "pandas",
    "pytesseract",
    "pdf2image",
    "Pillow",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"